--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,3 +23,22 @@ a[ng-click] {
   border-top-right-radius: 0px;
   border-top-left-radius: 0px;
 }
+
+.mov-spinner {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+  background: rgba(255, 255, 255, .4);
+  z-index: 1000;
+  display: none;
+  i {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -15px;
+    margin-top: -15px;
+  }
+
+}
