--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,40 +25,37 @@ a[ng-click] {
   li {
     margin-bottom: 20px;
     transition: transform 0.2s;
-    .poster img {
-      -webkit-border-top-left-radius: 4px;
-      -webkit-border-top-right-radius: 4px;
-      -moz-border-radius-topleft: 4px;
-      -moz-border-radius-topright: 4px;
-      border-top-left-radius: 4px;
-      border-top-right-radius: 4px;
-    }
-    .movie-info {
-      background: #34495e;
-      color: #fff;
-      padding: 4px 8px;
-      height: 48px;
-      -webkit-border-bottom-right-radius: 4px;
-      -webkit-border-bottom-left-radius: 4px;
-      -moz-border-radius-bottomright: 4px;
-      -moz-border-radius-bottomleft: 4px;
-      border-bottom-right-radius: 4px;
-      border-bottom-left-radius: 4px;
-      .title {
-        display: block;
-        overflow: hidden !important;
-        white-space: nowrap;
-        text-overflow: ellipsis;
+    .poster {
+      border-radius: 4px;
+      background-color: #34495e;
+      background-size: cover;
+      height: 296px;
+      .movie-info {
+        color: #fff;
+        padding: 4px 8px;
+        height: 48px;
+        background-color: #34495e;
+        position: relative;
+        top: 248px;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+        .title {
+          display: block;
+          overflow: hidden !important;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+        }
+        .year {
+          font-size: 0.8em;
+          font-weight: bold;
+          color: #1ABC9C;
+        }
       }
-      .year {
-        font-size: 0.8em;
-        font-weight: bold;
-        color: #1ABC9C;
+      &:hover {
+        transform: scale(1.05, 1.05);
       }
     }
-    &:hover {
-      transform: scale(1.05, 1.05);
-    }
+
   }
 }
 
