--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,7 +29,11 @@ a[ng-click] {
       border-top-left-radius: 4px;
       border-top-right-radius: 4px;
       background-size: cover;
+      background-position: center;
       height: 248px;
+      @media screen and (max-width: 480px) {
+        height: 190px;
+      }
     }
     .movie-info {
       color: #fff;
