--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,14 +25,19 @@ a[ng-click] {
   li {
     margin-bottom: 20px;
     transition: transform 0.2s;
-    .poster {
+    .placeholder {
       border-top-left-radius: 4px;
       border-top-right-radius: 4px;
+      background-image: url(../images/placeholder.jpg);
       background-size: cover;
       background-position: center;
-      height: 248px;
-      @media screen and (max-width: 480px) {
-        height: 190px;
+      .poster {
+        background-size: cover;
+        background-position: center;
+        height: 248px;
+        @media screen and (max-width: 480px) {
+          height: 190px;
+        }
       }
     }
     .movie-info {
@@ -43,6 +48,8 @@ a[ng-click] {
       border-bottom-left-radius: 4px;
       border-bottom-right-radius: 4px;
       margin-top: -2px;
+      font-size: 0.8em;
+      line-height: 1.5;
       .title {
         display: block;
         overflow: hidden !important;
