--- a/app/views/movies/list.html
+++ b/app/views/movies/list.html
@@ -5,11 +5,13 @@
 </ul>
 
 <div class="container">
-    <ul id="movie_list" class="row movie-grid" infinite-scroll="nextPage()" infinite-scroll-distance="0" infinite-scroll-immediate-check="true">
+    <ul id="movie_list" class="row movie-grid" infinite-scroll="nextPage()" infinite-scroll-distance="1" infinite-scroll-immediate-check="true" infinite-scroll-disabled="busy">
         <li class="col-xs-6 col-md-2 movie-grid-item" ng-repeat="movie in movies track by $index">
-            <div class="poster" style="background-image: url({{movie.images.poster.thumb}})"></div>
+            <div class="placeholder">
+                <div class="poster" ng-style="{'background-image': 'url({{movie.images.poster.thumb}})'}"></div>
+            </div>
             <div class="movie-info">
-                <span class="title">{{movie.title}}</span>
+                <span class="title" title="{{movie.title}}">{{movie.title}}</span>
                 <span class="year">{{movie.year}}</span>
             </div>
         </li>
