--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,16 +1,12 @@
-$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
-// bower:scss
-@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
-// endbower
-
 body {
   padding: 0;
+  background: #34495E;
 }
 
 /* Custom page footer */
 .footer {
   padding-top: 19px;
-  color: #777;
+  color: #fff;
   border-top: 1px solid #e5e5e5;
 }
 
@@ -30,14 +26,10 @@ a[ng-click] {
     margin-bottom: 20px;
     transition: transform 0.2s;
     .placeholder {
-      border-top-left-radius: 4px;
-      border-top-right-radius: 4px;
-      background-image: url(../images/placeholder.jpg);
+      background: url(../images/placeholder.jpg) center;
       background-size: cover;
-      background-position: center;
+      border: 5px solid #fff;
       .poster {
-        border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
         background-size: cover;
         background-position: center;
         height: 248px;
@@ -47,16 +39,14 @@ a[ng-click] {
       }
     }
     .movie-info {
-      color: #fff;
       padding: 4px 8px;
       height: 48px;
-      background-color: #34495e;
-      border-bottom-left-radius: 4px;
-      border-bottom-right-radius: 4px;
+      background-color: #fff;
       margin-top: -2px;
+      line-height: 1.4;
       font-size: 0.8em;
-      line-height: 1.5;
       .title {
+        color: #34495E;
         display: block;
         overflow: hidden !important;
         white-space: nowrap;
@@ -65,7 +55,7 @@ a[ng-click] {
       .year {
         font-size: 0.8em;
         font-weight: bold;
-        color: #1ABC9C;
+        color: #16A085;
       }
     }
     &:hover {
@@ -89,5 +79,11 @@ a[ng-click] {
     top: 50%;
     margin-left: -15px;
     margin-top: -15px;
+  }
+}
+
+.header {
+  .navbar {
+    background: #2C3E50;
   }
 }
