--- a/app/views/movies/list.html
+++ b/app/views/movies/list.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <ul id="movie_list" class="row movie-grid" infinite-scroll="nextPage()" infinite-scroll-distance="1" infinite-scroll-immediate-check="true" infinite-scroll-disabled="busy">
+    <ul id="movie_list" class="row movie-grid" infinite-scroll="nextPage()" infinite-scroll-distance="1" infinite-scroll-immediate-check="true" infinite-scroll-disabled="!scrollEnabled">
         <li class="col-xs-6 col-md-2 movie-grid-item" ng-repeat="movie in movies track by $index">
             <div class="placeholder">
                 <div class="poster" ng-style="{'background-image': 'url({{movie.images.poster.thumb}})'}"></div>
