--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -87,3 +87,16 @@ a[ng-click] {
     background: #2C3E50;
   }
 }
+
+.navbar oauth a > span {
+  color: #fff;
+  font-size: 16px;
+  padding: 15px 21px;
+  line-height: 23px;
+  font-weight: 700;
+  display: block;
+  position: relative;
+  &:hover {
+    color: #1abc9c;
+  }
+}
