--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,7 +26,7 @@ a[ng-click] {
     margin-bottom: 20px;
     transition: transform 0.2s;
     .placeholder {
-      background: url(../images/placeholder.jpg) center;
+      background: url(../../images/placeholder.jpg) center;
       background-size: cover;
       border: 5px solid #fff;
       .poster {
