--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -100,3 +100,27 @@ a[ng-click], a[ui-sref] {
     color: #1abc9c;
   }
 }
+
+#genres {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  line-height: 30px;
+  list-style: none;
+  border: 1px solid black;
+  background: #0d3349;
+  padding: 0;
+  margin: 0;
+  li {
+    display: inline;
+    margin: 0 6px;
+    a {
+      color: #888;
+    }
+    &.active a {
+      color: #fff;
+    }
+  }
+}
