--- a/src/app/movie/details/movieDetails.html
+++ b/src/app/movie/details/movieDetails.html
@@ -18,4 +18,5 @@
     </p>
 
     <watchlist-button movie="movieDetailsCtrl.movie"></watchlist-button>
+    <watched-button movie="movieDetailsCtrl.movie"></watched-button>
 </div>
